[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/oddballz.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/SettingsInGame.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 1 )

[node name="SettingsInGame" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.262745, 0.305882, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 468.514
margin_top = 44.7041
margin_right = 1277.51
margin_bottom = 266.704
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "these are our settings..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Obstacles v0.1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button-back" type="Button" parent="."]
margin_left = 330.618
margin_top = 586.129
margin_right = 647.618
margin_bottom = 668.129
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.698039, 0.698039, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button-to-menu" type="Button" parent="."]
margin_left = 685.752
margin_top = 589.645
margin_right = 1031.75
margin_bottom = 671.645
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.698039, 0.698039, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "QUIT TO MENU"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="Control" parent="."]
margin_left = 226.24
margin_top = 45.5326
margin_right = 1184.24
margin_bottom = 516.533

[node name="Label3" type="Label" parent="SettingsContainer"]
margin_left = 161.159
margin_top = 241.033
margin_right = 396.159
margin_bottom = 272.033
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Sound Effects:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="SettingsContainer"]
margin_left = 164.242
margin_top = 309.677
margin_right = 337.242
margin_bottom = 340.677
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "3rd person"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="SettingsContainer"]
margin_left = 164.242
margin_top = 367.71
margin_right = 337.242
margin_bottom = 398.71
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Show FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="SettingsContainer"]
margin_left = 384.77
margin_top = 307.472
margin_right = 858.77
margin_bottom = 338.472
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.690196, 0.764706, 0.188235, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "warning: experimental feature!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkbox-sfx" type="CheckBox" parent="SettingsContainer"]
margin_left = 412.701
margin_top = 246.608
margin_right = 436.701
margin_bottom = 270.608
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkbox-3rdperson" type="CheckBox" parent="SettingsContainer"]
margin_left = 339.925
margin_top = 316.535
margin_right = 363.925
margin_bottom = 340.535
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkbox-fps" type="CheckBox" parent="SettingsContainer"]
margin_left = 339.925
margin_top = 374.568
margin_right = 363.925
margin_bottom = 398.568
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="button-back" to="." method="_on_buttonback_pressed"]
[connection signal="pressed" from="button-to-menu" to="." method="_on_buttontomenu_pressed"]
[connection signal="toggled" from="SettingsContainer/checkbox-sfx" to="." method="_on_checkboxsfx_toggled"]
[connection signal="toggled" from="SettingsContainer/checkbox-3rdperson" to="." method="_on_checkbox3rdperson_toggled"]
[connection signal="toggled" from="SettingsContainer/checkbox-fps" to="." method="_on_checkboxfps_toggled"]
